# calci

./: Cargo.toml  README.md
assets/: config.toml  configs.toml
assets/screenshots/: example.md
assets/themes/: darkhorizon-base10.toml  darkhorizon.toml  oxocarbon-base10.toml  oxocarbon.toml  soapy.toml
src/: app.rs  config.rs  main.rs  renderer.rs  theme.rs
