[package]
name = "calci"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
atty = "0.2.14"
clap = { version = "4.6.0", features = ["derive"] }
clap_complete = "4.6.0"
crossterm = "0.29.0"
calcifer = { path = "../calcifer" }
pulldown-cmark = "0.13.1"
ratatui = "0.30.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
syntect = "5.3.0"
thiserror = "2.0.18"
toml = "1.0.7"
unicode-width = "0.2.2"
webbrowser = "1.2.0"

[dev-dependencies]
tempfile = "3.27.0"
